--- a/Jala_Technologies/.project
+++ b/Jala_Technologies/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jala_Technologies</name>
+	<name>Core_Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
